--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/kristiyantefov/Employee-Tracker#readme",
   "dependencies": {
+    "console-clear": "^1.1.1",
     "express": "^4.18.2",
+    "figlet": "^1.6.0",
     "inquirer": "^8.2.4",
     "mysql2": "^3.2.1"
   }
